add special `codeBase` for permission policy